@@ -5,10 +5,7 @@ import com.localbrand.common.Module_Enum;
 import com.localbrand.common.ServiceResult;
 import com.localbrand.common.Status_Enum;
 import com.localbrand.dto.request.BillRequestDTO;
-import com.localbrand.dto.response.BillComboResponseDTO;
-import com.localbrand.dto.response.BillProductResponseDTO;
-import com.localbrand.dto.response.BillResponseDTO;
-import com.localbrand.dto.response.BillResponseUserDTO;
+import com.localbrand.dto.response.*;
 import com.localbrand.entity.*;
 import com.localbrand.exception.Notification;
 import com.localbrand.model_mapping.Impl.AddressMapping;
@@ -324,45 +321,21 @@ public class BillServiceImpl implements BillService {
     }
 
     @Override
-    public ServiceResult<List<BillProductResponseDTO>> getListBillProductByBill(Optional<Integer> page, Optional<Integer> limit, Optional<Integer> idBill) {
+    public ServiceResult<BillDetailResponseDTO> getBillDetailByBillUser(Optional<Integer> idBill) {
         log.error("Get list bill product and filter");
-
-        if(page.isEmpty() || page.get() < 0
-                || limit.isEmpty() || limit.get() <1
-        ){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.PAGE_INVALID, null);
-        }
 
         if(idBill.isEmpty() || idBill.get()<1){
             return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_FALSE, null);
         }
 
-        Pageable pageable = PageRequest.of(page.orElse(0),limit.get());
+        BillDetailResponseDTO billDetailResponseDTO = new BillDetailResponseDTO();
+        List<BillProduct> lstBillProduct = this.billProductRepository.findAllByIdBillAndIdStatus(idBill.get(), Status_Enum.EXISTS.getCode());
+        List<BillCombo> lstBillCombo = this.billComboRepository.findAllByIdBillAndIdStatus(idBill.get(), Status_Enum.EXISTS.getCode());
 
-        List<BillProduct> lstBillProduct = this.billProductRepository.findAllByIdBillAndIdStatus(idBill.get(), Status_Enum.EXISTS.getCode(), pageable).toList();
+        billDetailResponseDTO.setListBillProductDetail(lstBillProduct.stream().map(billProductMapping :: toDto).collect(Collectors.toList()));
+        billDetailResponseDTO.setListBillComboDetail(lstBillCombo.stream().map(billComboMapping :: toDto).collect(Collectors.toList()));
 
-        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_SUCCESS, lstBillProduct.stream().map(this.billProductMapping::toDto).collect(Collectors.toList()));
-    }
-
-    @Override
-    public ServiceResult<List<BillComboResponseDTO>> getListBillComboByBill(Optional<Integer> page, Optional<Integer> limit, Optional<Integer> idBill) {
-        log.error("Get list bill product and filter");
-
-        if(page.isEmpty() || page.get() < 0
-                || limit.isEmpty() || limit.get() <1
-        ){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.PAGE_INVALID, null);
-        }
-
-        if(idBill.isEmpty() || idBill.get()<1){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.Bill.Bill_Combo.GET_LIST_BILL_COMBO_FALSE, null);
-        }
-
-        Pageable pageable = PageRequest.of(page.orElse(0),limit.get());
-
-        List<BillCombo> billCombos = this.billComboRepository.findAllByIdBillAndIdStatus(idBill.get(), Status_Enum.EXISTS.getCode(), pageable).toList();
-
-        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Combo.GET_LIST_BILL_COMBO_SUCCESS, billCombos.stream().map(this.billComboMapping::toDto).collect(Collectors.toList()));
+        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_SUCCESS, billDetailResponseDTO);
     }
 
     @Override
@@ -429,7 +402,7 @@ public class BillServiceImpl implements BillService {
     }
 
     @Override
-    public ServiceResult<List<BillProductResponseDTO>> getListBillProductByBillAdmin(HttpServletRequest request, Optional<Integer> page, Optional<Integer> limit, Optional<Integer> idBill) {
+    public ServiceResult<BillDetailResponseDTO> getBillDetailByBillAdmin(HttpServletRequest request, Optional<Integer> idBill) {
 
         Object email = request.getAttribute("USER_NAME");
 
@@ -442,58 +415,22 @@ public class BillServiceImpl implements BillService {
             return new ServiceResult<>(HttpStatus.UNAUTHORIZED, "You can not get bill", null);
         }
 
-        log.error("Get list bill product and filter");
-
-        if(page.isEmpty() || page.get() < 0
-                || limit.isEmpty() || limit.get() <1
-        ){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.PAGE_INVALID, null);
-        }
+        log.error("Get bill detail");
 
         if(idBill.isEmpty() || idBill.get()<1){
             return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_FALSE, null);
         }
 
-        Pageable pageable = PageRequest.of(page.orElse(0), limit.get());
+        BillDetailResponseDTO billDetailResponseDTO = new BillDetailResponseDTO();
+        List<BillProduct> lstBillProduct = this.billProductRepository.findAllByIdBill(idBill.get());
+        List<BillCombo> lstBillCombo = this.billComboRepository.findAllByIdBill(idBill.get());
 
-        List<BillProduct> lstBillProduct = this.billProductRepository.findAllByIdBill(idBill.get(), pageable).toList();
-
-        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_SUCCESS, lstBillProduct.stream().map(this.billProductMapping::toDto).collect(Collectors.toList()));
-
-    }
-
-    @Override
-    public ServiceResult<List<BillComboResponseDTO>> getListBillComboByBillAdmin(HttpServletRequest request, Optional<Integer> page, Optional<Integer> limit, Optional<Integer> idBill) {
-        Object email = request.getAttribute("USER_NAME");
-
-        if(Objects.nonNull(email)){
-            Boolean checkRole = role_utils.checkRole(email.toString(), Module_Enum.BILL.getModule(), Action_Enum.READ.getAction());
-            if(!checkRole){
-                return new ServiceResult<>(HttpStatus.UNAUTHORIZED, "You can not get bill", null);
-            }
-        }else{
-            return new ServiceResult<>(HttpStatus.UNAUTHORIZED, "You can not get bill", null);
-        }
-
-        log.error("Get list bill product and filter");
-
-        if(page.isEmpty() || page.get() < 0
-                || limit.isEmpty() || limit.get() <1
-        ){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.PAGE_INVALID, null);
-        }
-
-        if(idBill.isEmpty() || idBill.get()<1){
-            return new ServiceResult<>(HttpStatus.BAD_REQUEST, Notification.Bill.Bill_Combo.GET_LIST_BILL_COMBO_FALSE, null);
-        }
-
-        Pageable pageable = PageRequest.of(page.orElse(0), limit.get());
-
-        List<BillCombo> lstBillCombo = this.billComboRepository.findAllByIdBill(idBill.get(), pageable).toList();
-
-        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Combo.GET_LIST_BILL_COMBO_SUCCESS, lstBillCombo.stream().map(this.billComboMapping::toDto).collect(Collectors.toList()));
+        billDetailResponseDTO.setListBillProductDetail(lstBillProduct.stream().map(billProductMapping::toDto).collect(Collectors.toList()));
+        billDetailResponseDTO.setListBillComboDetail(lstBillCombo.stream().map(billComboMapping::toDto).collect(Collectors.toList()));
+        return new ServiceResult<>(HttpStatus.OK, Notification.Bill.Bill_Product.GET_LIST_BILL_PRODUCT_SUCCESS, billDetailResponseDTO);
 
     }
+
 
     @Override
     public ServiceResult<List<BillResponseUserDTO>> getAllListBillUserOther(Optional<Integer> page, Optional<Integer> limit, Optional<Integer> idUser) {
